fix styling on smaller widths;

--- a/style.css
+++ b/style.css
@@ -92,6 +92,7 @@ button svg {
   position: relative;
   display: grid;
   grid-template-columns: repeat(8, 1fr);
+  overflow: hidden;
 }
 
 .about-overlay {
@@ -138,7 +139,6 @@ button svg {
 }
 
 .projects {
-  height: 500px;
   display: grid;
   grid-template-columns: 1fr 14fr 1fr;
   grid-template-rows: 1fr 8fr 1fr;
@@ -151,6 +151,8 @@ button svg {
   grid-column: 2/3;
   padding: 20px;
   display: flex;
+  grid-row: 2/4;
+  margin-bottom: 30px;
 }
 
 .projects h2 {
@@ -171,6 +173,7 @@ button svg {
   border-radius: 10px;
   margin: 0 10px;
   padding: 20px;
+  flex: 1;
 }
 
 .contact {
@@ -251,6 +254,24 @@ textarea {
 }
 
 @media screen and (max-width: 900px) {
+  .intro {
+    padding: 0;
+    grid-column: 2/5;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+  }
+
+  .intro h1,
+  .intro p {
+    text-align: center;
+  }
+
+  .about {
+    overflow: hidden;
+  }
+
   .about-me p {
     font-size: 0.9rem;
   }
@@ -260,13 +281,16 @@ textarea {
   }
 
   .projects {
-    height: auto;
+    flex: 1;
   }
 
   .project-box {
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+  }
+
+  .project {
+    margin-bottom: 10px;
   }
 
   .contact {
@@ -277,19 +301,49 @@ textarea {
     padding-left: 0;
     border-left: none;
   }
+
+  .buttons {
+    display: flex;
+    flex-direction: row;
+    justify-content:center;
+  }
+
+  .buttons button:first-child {
+    margin-right: 1rem;
+  }
 }
  
 @media screen and (max-width: 700px) {
-  .intro h1 {
-    font-size: 48px;
+  main {
+    height: 500px;
   }
 
-  .intro h2 {
-    font-size: 18px;
+  .intro {
+    padding: 0;
+  }
+
+  .intro h1 {
+    font-size: 48px;
+    text-align: center;
+  }
+
+  .intro p {
+    font-size: 24px;
+    text-align: center;
+  }
+
+  .buttons {
+    display: flex;
+    flex-direction: row;
+    justify-content:space-between;
+  }
+
+  .buttons button:first-child {
+    margin-right: 0.5rem;
   }
 
   button {
-    padding: 0 2rem;
+    padding: 0 4rem;
   }
 
   .about {
@@ -299,11 +353,17 @@ textarea {
   .about-overlay {
     height: 800px;
   }
+
+  form {
+    width: 90%;
+  }
 }
 
 @media screen and (max-width: 600px) {
   .intro {
     padding: 0;
+    margin-right: auto;
+    margin-left: auto;
   }
 
   .intro h1 {
@@ -316,14 +376,11 @@ textarea {
     text-align: center;
   }
 
-  form {
-    width: 90%;
-  }
-
   .buttons {
     display: flex;
     flex-direction: column;
     align-items: center;
+    width: 60%
   }
 
   button {
@@ -352,3 +409,24 @@ textarea {
   }
 }
  
+@media screen and (max-width:450px) {
+  main {
+    height: 500px;
+  }
+
+  .intro {
+    grid-column: 1/6;
+  }
+
+  .intro h1 {
+    font-size: 42px;
+  }
+
+  .intro p {
+    font-size: 32px;
+  }
+
+  .buttons { 
+    width: 40%
+  }
+}
